--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
   "devDependencies": {
     "@types/pixi.js": "^5.0.0",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.1",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "node-sass": "^9.0.0",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.4.4",
-    "webpack": "^5.88.2",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "pixi.js": "^7.2.4"
+    "gsap": "^3.12.5",
+    "pixi-spine": "^4.0.4",
+    "pixi.js": "^8.1.1"
   }
 }
